[gd_scene load_steps=3 format=3 uid="uid://dmq8lh5x7cvyp"]

[ext_resource type="PackedScene" uid="uid://b2jx5v8yvwdxe" path="res://car.tscn" id="1_1"]
[ext_resource type="Script" path="res://main.gd" id="2_1"]

[node name="Main" type="Node3D"]
script = ExtResource("2_1")

[node name="Car" parent="." instance=ExtResource("1_1")]

[node name="Ground" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = BoxMesh(size = Vector3(50, 2, 50))

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = BoxShape3D(size = Vector3(50, 2, 50))

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
shadow_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Status: Idle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 60.0
offset_bottom = 110.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Speed: 0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ForwardButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -600.0
offset_right = -20.0
offset_bottom = -480.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Forward ↑"

[node name="BackwardButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -600.0
offset_right = 200.0
offset_bottom = -480.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Backward ↓"

[node name="AccelerateButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -450.0
offset_right = -20.0
offset_bottom = -330.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Accelerate ++"

[node name="DecelerateButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -450.0
offset_right = 200.0
offset_bottom = -330.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Brake --"

[node name="ResetButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -280.0
offset_right = 90.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Reset"
